feat: add SQL queries for creating, retrieving, and updating currency rates
feat: add rates refresh logic

test: add tests for RatesInteractor with API rate fetching and currency updates

refactor: update test_rates_interactor with improved fixtures and assertions

feat: replace responses library with httpx_client fixture in tests

feat: add requester fixture to test_rates_interactor.py

refactor: remove unused imports and clean up test file formatting

refactor: remove fixtures and initialize sut and requester in tests

refactor: update test fixtures and rates interactor tests

feat: add get_rate fixture to conftest and update rate interactor tests

test: add assertions for JPY and RUB currency rates in test_update_currency_rates

fix: update rate retrieval and currency assertions in tests

feat: add get_currency fixture to conftest and update tests

feat: add worker and scheduler services

Redis broker and service to docker-compose

feat: add more currencies to currencies.py

refactor: change base currency from USD to EUR and update rates parsing
logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,69 @@ services:
           target: /src
         - action: rebuild
           path: ./pyproject.toml
+        - action: rebuild
+          path: ./.env
     environment:
       - TG_TOKEN
       - DATABASE_URL
+      - CURRENCY_API_KEY
+      - REDIS_URL
     depends_on:
       db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+        
+  worker:
+    image: ex_tracker_tg_bot:${TAG:-latest}
+    build:
+      dockerfile: ./Dockerfile
+      context: .
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./src
+          target: /src
+        - action: rebuild
+          path: ./pyproject.toml
+        - action: rebuild
+          path: ./.env
+    command: ["taskiq", "worker", "worker.broker:broker", "-fsd"]
+    environment:
+      - DATABASE_URL
+      - CURRENCY_API_KEY
+      - CURRENCY_URL
+      - REDIS_URL
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+        
+  scheduler:
+    image: ex_tracker_tg_bot:${TAG:-latest}
+    build:
+      dockerfile: ./Dockerfile
+      context: .
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./src
+          target: /src
+        - action: rebuild
+          path: ./pyproject.toml
+        - action: rebuild
+          path: ./.env
+    command: ["taskiq", "scheduler", "worker.broker:scheduler", "-fsd"]
+    environment:
+      - DATABASE_URL
+      - CURRENCY_API_KEY
+      - CURRENCY_URL
+      - REDIS_URL
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   db:
@@ -46,8 +104,21 @@ services:
       - 8080:8978
     volumes:
       - dbeaverdata:/opt/cloudbeaver/workspace
+      
+  redis:
+    image: redis:7-alpine
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
+    volumes:
+      - redis_data:/data
 
 volumes:
   pgdata:
   dbeaverdata:
+  redis_data:
 
