--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,3 +4,4 @@ env =
     DATABASE_PASSWORD=5
     DATABASE_URL=postgresql+asyncpg://postgres:{DATABASE_PASSWORD}@localhost:{DATABASE_PORT}/postgres
     MIGRATION_DATABASE_URL=postgresql://postgres:{DATABASE_PASSWORD}@localhost:{DATABASE_PORT}/postgres?sslmode=disable
+    CURRENCY_URL=https://exchangeratesapi.io
