--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ loguru = "^0.7.3"
 pydantic = "^2.10.6"
 sqlalchemy = "^2.0.38"
 asyncpg = "^0.30.0"
+taskiq = "^0.11.6"
+httpx = "^0.28.1"
+taskiq-redis = "^1.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
